--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 axum = "0.6.1"
 serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.91"
 tokio = { version = "1.23", features = ["full"] }
 tower-http = { version = "0.3.5", features = ["trace", "cors"] }
 tracing = "0.1.37"
